chore(build): update Run Prod (scripts/run-prod.ps1)